first rubocop pass

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,27 @@ Style/StringLiterals:
 
 Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
+
+Layout/IndentationWidth:
+    Width: 4
+
+Bundler/OrderedGems:
+    Enabled: false
+
+Style/ClassAndModuleChildren:
+    Enabled: false
+
+Layout/EmptyLinesAroundClassBody:
+    Enabled: false
+
+Style/FrozenStringLiteralComment:
+    Enabled: false
+
+Layout/EmptyLinesAroundModuleBody:
+    EnforcedStyle: empty_lines
+
+Style/RedundantReturn:
+    Enabled: false
+
+Layout/CaseIndentation:
+    EnforcedStyle: case
